--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,14 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="poster">poster</string>
-    <string name="director">director</string>
-    <string name="directed_by">Directed by: </string>
+    <string name="director1">Directed By: </string>
+    <string name="director">Director</string>
     <string name="movie_title">Movie Title</string>
-    <string name="cast">Cast: </string>
-    <string name="release_year">Release Year: </string>
+    <string name="cast">Cast</string>
+    <string name="release_year">Release Year</string>
     <string name="movie_desc">Movie desc</string>
     <string name="movie_description">Movie Description</string>
     <string name="now_showing">Now Showing</string>
+    <string name="casts">Casts:</string>
+    <string name="released_in">Released In:</string>
 </resources>
